# operator-core-public

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 02-architecture-overview.md  03-modules-and-responsibilities.md  ARCHITECTURE.md  EMPLOYER-DEMO.md  PORTFOLIO.md  PUBLIC-READINESS-CHECKLIST.md
src/operator_core/: __init__.py  __main__.py  activation.py  app.py  bootstrap.py  config.py  runtime.py
src/operator_core/core/: __init__.py  command_router.py  menu_layouts.py  project_resolver.py  rules_engine.py
src/operator_core/integrations/: __init__.py  airtable_service.py  analysis_foundation_persistence.py  analytics_service.py  anthropic_service.py  (+8 more)
tests/: conftest.py  test_activation_readiness.py  test_app_startup_readiness.py  test_runtime_telegram.py
tests/core/: test_command_router.py  test_rules_engine.py
tests/integrations/: test_analysis_foundation_persistence.py  test_analytics_loader.py  test_anthropic_service.py  test_daily_plan_generation_service.py  test_daily_plan_service.py  test_daily_plan_service_platform_foundation.py  test_daily_plan_upload_service.py  test_openai_service_fallback.py  test_operational_knowledge_loader.py  test_platform_signal_loader.py  test_telegram_service.py
tests/proactive/: test_checker.py  test_daily_plan_schedule_service.py  test_pending_store.py  test_plan_reminder_service.py  test_plan_reminder_store.py  test_posting_recommender.py  test_stale_draft_trigger.py
tests/projects/: test_project_docs_loader.py
tests/request_flow/: test_proactive_confirm_reject.py
(+137 files in other folders)
