[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "operator-core"
version = "0.1.0"
description = "Python-first operator runtime for Telegram-driven project operations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Emanuel Schille" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
