[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "operator-core"
version = "0.1.0"
description = "Python-first operator runtime for Telegram-driven project operations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Emanuel Schille" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# pytest is a dev/test-only concern; the runtime keeps `dependencies = []`.
[tool.pytest.ini_options]
# Make `src/` importable without an editable install or PYTHONPATH wiring.
pythonpath = ["src"]
# importlib import mode lets same-named test files (e.g. several `test_service.py`)
# coexist without the historical "import file mismatch" collection errors.
addopts = "--import-mode=importlib"
testpaths = ["tests"]
